--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         ================================================== -->
         <meta name="format-detection" content="telephone=no">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Google Metas
+        ================================================== -->
+        <meta name="google-site-verification" content="EZNjCAuN2KH-IirzJY78GNNtACHwkfui-f1eMPS1X5I" />
         
         <!-- Template CSS Files
         ================================================== -->
