Adding Dapper Linux 26-2017-09-08 to download page

--- a/download.html
+++ b/download.html
@@ -129,8 +129,30 @@
                         </div>
                         <div class="block">
                         <br><br>
-                            <h3> Dapper Linux 25 Alpha</h3>
-                            <p>ISO images are released weekly. Latest: 2017-08-08</p>
+                            <h3> Dapper Linux 26 Alpha</h3>
+                            <p>ISO images are released weekly. Latest: 2017-09-08</p>
+                            <br>
+                            <table>
+                                <tr>
+                                    <td>
+                                        <img class="img-responsive" src="images/anaconda.png" alt="" style="float: left;">
+                                         <a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-26-2017-09-08.iso" style="float: left;"><h3>Dapper Linux 26 2017-09-08</h3></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>2.5 GB ISO Image for x86_64 based personal computers</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p><a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-26-2017-09-08.iso.sha1.txt">sha1</a> <a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-26-2017-09-08.iso.sha256.txt">sha256</a> <a>sig</a></p>
+                                    </td>
+                                </tr>
+                            </table>
+                            <br>
+                            <h3> Unsupported Releases</h3>
+                            <p>These releases are no longer being maintained. Its always best to install the latest supported release, which you can find above.<br>Note that some releases may not be as secure as more recent releases, which might leave you especially vulnerable to malicious actors. Always use the latest release available. You have been warned.</p>
                             <br>
                             <table>
                                 <tr>
@@ -141,7 +163,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <p>2.4 GB ISO Image for amd64 based personal computers</p>
+                                        <p>2.4 GB ISO Image for x86_64 based personal computers</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -151,27 +173,25 @@
                                 </tr>
                             </table>
                             <br>
+                                                        <br>
                             <table>
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="images/anaconda.png" alt="" style="float: left;">
-                                         <a style="float: left;"><h3>Dapper Linux 25 - ARM Edition</h3></a>
+                                         <a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-24-2016-10-24.iso" style="float: left;"><h3>Dapper Linux 24 2016-10-24</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <p>Coming soon...</p>
+                                        <p>2.0 GB ISO Image for x86_64 based personal computers</p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <p><a>sha1</a> <a>sha256</a> <a>sig</a></p>
+                                        <p><a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-24-2016-10-24.iso.sha1.txt">sha1</a> <a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-24-2016-10-24.iso.sha256.txt">sha256</a> <a>sig</a></p>
                                     </td>
                                 </tr>
                             </table>
-                            <br>
-                            <h3>Source Code</h3>
-                            <p>All source code, scripts, packages and kickstarts used to build Dapper Linux are available on <a href='https://github.com/dapperlinux'>GitHub</a>.
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -204,6 +224,9 @@
                                     </td>
                                 </tr>
                             </table>
+                            <br>
+                            <h3>Source Code</h3>
+                            <p>All source code, scripts, packages and kickstarts used to build Dapper Linux are available on <a href='https://github.com/dapperlinux'>GitHub</a>.
                         </div>
                     </div>
                 </div>
