Major overhaul of website.
Extensively modifed and fixed numerous bugs and bad formatting.
Rewrote the downloads page to be more consistent and better on all devices.
Added a patchset page, and added an entry on the front page.
Wrote two blog posts, one on the release of Dapper Linux 26 and one on the patchset.
Added new screenshots for the release of Dapper Linux 26.
Lots of polish added everywhere.

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
         ================================================== -->
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <title>Blog</title>
         <meta name="description" content="Blog posts about Dapper Linux">
         <meta name="keywords" content="Blog, posts">
@@ -67,6 +67,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="features.html">Features</a></li>
                             <li><a href="download.html">Download</a></li>
+                            <li><a href="patchset.html">Patchset</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Support <span class="caret"></span></a>
                                 <div class="dropdown-menu">
@@ -129,6 +130,14 @@
                                         <h3>Recent Posts</h3>
                                         <ul>
                                             <li>
+                                                <a href="blog/announcing-dapper-secure-kernel-patchset.html">Announcing Dapper Secure Kernel Patchset</a><br>
+                                                <time>20 October 2017</time>
+                                            </li>
+                                            <li>
+                                                <a href="blog/announcing-dapper-linux-26.html">Announcing Dapper Linux 26</a><br>
+                                                <time>10 September 2017</time>
+                                            </li>
+                                            <li>
                                                 <a href="blog/hello-world.html">Hello World! Announcing Dapper Linux</a><br>
                                                 <time>18 April 2017</time>
                                             </li>
@@ -137,13 +146,49 @@
                                 </div>
                             </div>
                             <div class="col-md-8">
-                                <article class="wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">
+                            <article>
+                                    <div class="blog-post-image">
+                                        <a href="blog/announcing-dapper-secure-kernel-patchset.html"><img class="img-responsive" src="blog/images/post-3.png" alt="" /></a>
+                                    </div>
+                                    <div class="blog-content">
+                                        <h2 class="blogpost-title">
+                                        <a href="blog/announcing-dapper-secure-kernel-patchset.html">Announcing Dapper Secure Kernel Patchset</a>
+                                        </h2>
+                                        <div class="blog-meta">
+                                            <span>20 October 2017</span>
+                                            <span>by Matthew Ruffell</span>
+                                            <span>Thoughts</span>
+                                        </div>
+                                        <p>Its about time to write a blog post to announce a little side project that I have been working on over for the last few months. As much of the Linux security community is aware, in April 2017, Grsecurity <a href="https://grsecurity.net/passing_the_baton.php">announced</a> that they were discontinuing their publicly available "test" patchset, which bolstered and dramatically improves the security of the Linux kernel.
+                                        </p>
+                                        <a href="blog/announcing-dapper-secure-kernel-patchset.html" class="btn btn-dafault btn-details">Continue Reading</a>
+                                    </div>
+                                </article>
+                            <article>
+                                    <div class="blog-post-image">
+                                        <a href="blog/announcing-dapper-linux-26.html"><img class="img-responsive" src="blog/images/post-2.png" alt="" /></a>
+                                    </div>
+                                    <div class="blog-content">
+                                        <h2 class="blogpost-title">
+                                        <a href="blog/announcing-dapper-linux-26.html">Announcing Dapper Linux 26</a>
+                                        </h2>
+                                        <div class="blog-meta">
+                                            <span>10 September 2017</span>
+                                            <span>by Matthew Ruffell</span>
+                                            <span>Thoughts</span>
+                                        </div>
+                                        <p>It's time to announce the availability of Dapper Linux 26, the latest release of the flagship secure operating system by Dapper Linux Limited. Dapper Linux 26 is filled with all sorts of great features designed to bring you an easy to use operating system with excellent security. 
+                                        </p>
+                                        <a href="blog/announcing-dapper-linux-26.html" class="btn btn-dafault btn-details">Continue Reading</a>
+                                    </div>
+                                </article>
+                                <article>
                                     <div class="blog-post-image">
                                         <a href="blog/hello-world.html"><img class="img-responsive" src="blog/images/post-1.jpg" alt="" /></a>
                                     </div>
                                     <div class="blog-content">
                                         <h2 class="blogpost-title">
-                                        <a href="blog/hello-world.html">Hello World: Announcing Dapper Linux</a>
+                                        <a href="blog/hello-world.html">Hello World! Announcing Dapper Linux</a>
                                         </h2>
                                         <div class="blog-meta">
                                             <span>18 April 2017</span>
@@ -167,7 +212,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="block">
-                                <h2 class="title">Ready To Try Out Dapper Linux?</h1>
+                                <h2 class="title">Ready To Try Out Dapper Linux?</h2>
                                 <p>Let's get you secured. We will have you up and running in no time.</p>
                                 <a href="download.html" class="btn btn-default btn-contact">Download Now</a>
                             </div>
