--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         ================================================== -->
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <title>Contact</title>
         <meta name="description" content="Page with contact information and where to get help">
         <meta name="keywords" content="Contact, information, communication, email">
@@ -67,6 +67,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="features.html">Features</a></li>
                             <li><a href="download.html">Download</a></li>
+                            <li><a href="patchset.html">Patchset</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Support <span class="caret"></span></a>
                                 <div class="dropdown-menu">
@@ -121,14 +122,25 @@
                     <div class="col-md-6">
                         <div class="block">
                             <h2 class="subtitle">Contact Dapper Linux</h2>
-                            <p>Dapper Linux is a small and growing community. Tell your friends!</p>
+                            <p>
+                            	Dapper Linux is a small and growing community. Tell your friends!
+                           	</p>
                             <h3>Getting Support</h3>
                             <p>
                                 Need help? Want to talk to someone? You can join our IRC channel <a href="https://riot.im/app/#/room/#dapperlinux:matrix.org">#dapperlinux</a> on matrix.org where the developers will lurk from time to time. <br><br>
-                                Found a bug? Tell us about it! File an issue on this <a href="https://github.com/dapperlinux/dapper-linux-issues">GitHub repo</a>.<br>
+                                Found a bug? Tell us about it! File an issue on this <a href="https://github.com/dapperlinux/dapper-linux-issues">Github repo</a>.<br>
+                            </p>
                             <h3>Contacting the Developers</h3>
-                            <p>We would like to hear from any users who especially like Dapper Linux, so reach out to us on <a>Twitter</a>, <a>Reddit</a>, <a>Facebook</a> or <a>Google+</a>.<br><br>
-                            You can email us at <a href="mailto:support@dapperlinux.com">support@dapperlinux.com</a>, or for any other queries such as custom editions of Dapper Linux for your workplace or organisation, or more information about the company and investment, contact Matthew Ruffell at <a href="mailto:matthew.ruffell@dapperlinux.com">matthew.ruffell@dapperlinux.com</a></p>
+                            <p>
+                            	We would like to hear from any users who especially like Dapper Linux, so reach out to us on <a href="https://twitter.com/dapperlinux">Twitter</a>, <a href="https://www.reddit.com/r/dapperlinux">Reddit</a>, <a href="https://www.facebook.com/dapperlinux">Facebook</a> or <a href="https://github.com/dapperlinux">Github</a>.<br><br>
+                            You can email us at <a href="mailto:support@dapperlinux.com">support@dapperlinux.com</a>, or for any other queries such as custom editions of Dapper Linux for your workplace or organisation, or more information about the company and investment, contact Matthew Ruffell at <a href="mailto:matthew.ruffell@dapperlinux.com">matthew.ruffell@dapperlinux.com</a>
+                            </p>
+                            <h3>GPG Key</h3>
+                            <p>
+                            	Wanting to communicate securely or to verify a download? You can download our public key <a href="matthew_gpg_public_key.asc">here</a>.<br><br>
+                            	Matthew Ruffell <a href="mailto:matthew.ruffell@dapperlinux.com">matthew.ruffell@dapperlinux.com</a><br>
+                            	Fingerprint: 9FED F94E 211C A29B FFCF DFAA B3FE 5882 8237 090D
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -161,7 +173,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="block">
-                                <h2 class="title">Ready To Try Out Dapper Linux?</h1>
+                                <h2 class="title">Ready To Try Out Dapper Linux?</h2>
                                 <p>Let's get you secured. We will have you up and running in no time.</p>
                                 <a href="download.html" class="btn btn-default btn-contact">Download Now</a>
                             </div>
