--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         ================================================== -->
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <title>About</title>
         <meta name="description" content="About page, describing company leadership and team">
         <meta name="keywords" content="About, Company, Director">
@@ -67,6 +67,7 @@
                             <li><a href="about.html">About</a></li>
                             <li><a href="features.html">Features</a></li>
                             <li><a href="download.html">Download</a></li>
+                            <li><a href="patchset.html">Patchset</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Support <span class="caret"></span></a>
                                 <div class="dropdown-menu">
@@ -157,7 +158,7 @@
                         Open Source
                         </h2>
                         <p>
-                            Dapper Linux is open source software, and is built on efforts of the wider open source development community. You can download the source code and build Dapper Linux yourself, or audit the code easily. Dapper Linux contributes back to the community through bug reports.
+                            Dapper Linux is open source software, and is built on efforts of the wider open source development community. You can download the source code and build Dapper Linux yourself, or audit the code easily. Dapper Linux is designed for you to be able to learn and build your own improvements.
                         </p>
                     </div>
                     <div class="block about-feature-3">
@@ -205,7 +206,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="block">
-                                <h2 class="title">Ready To Try Out Dapper Linux?</h1>
+                                <h2 class="title">Ready To Try Out Dapper Linux?</h2>
                                 <p>Let's get you secured. We will have you up and running in no time.</p>
                                 <a href="download.html" class="btn btn-default btn-contact">Download Now</a>
                             </div>
