Finally fixed the social icons

--- a/404.html
+++ b/404.html
@@ -134,22 +134,22 @@
                         <ul class="social">
                             <li>
                                 <a href="https://www.facebook.com/dapperlinux">
-                                    <i> Facebook</i>
+                                    <img class="img-responsive" alt="" src="/images/icons/icon-1.svg" height="48" width=48">
                                 </a>
                             </li>
                             <li>
-                                <a href="http://www.twitter.com/dapperlinux">
-                                    <i> Twitter</i>
+                                <a href="https://twitter.com/dapperlinux">
+                                    <img class="img-responsive" alt="" src="/images/icons/icon-2.svg" height="48" width=48">
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.github.com/dapperlinux">
-                                    <i> Github</i>
+                                <a href="https://github.com/dapperlinux">
+                                    <img class="img-responsive" alt="" src="/images/icons/icon-3.svg" height="48" width=48">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.reddit.com/r/dapperlinux">
-                                    <i> Reddit</i>
+                                    <img class="img-responsive" alt="" src="/images/icons/icon-4.svg" height="48" width=48">
                                 </a>
                             </li>
                         </ul>
