--- a/download.html
+++ b/download.html
@@ -152,7 +152,7 @@
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-26-2017-11-13.iso" style="float: left;"><h3>Dapper Linux 26 2017-11-13</h3></a>
+                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso" style="float: left;"><h3>Dapper Linux 26 2017-11-13</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -163,9 +163,9 @@
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-26-2017-11-13.iso.sig">sig</a>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-26-2017-11-13.iso.sha1.txt">sha1</a>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-26-2017-11-13.iso.sha256.txt">sha256</a></p>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sig">sig</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sha1.txt">sha1</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sha256.txt">sha256</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -207,7 +207,7 @@
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-25-2017-08-08.iso" style="float: left;"><h3>Dapper Linux 25 2017-08-08</h3></a>
+                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-25-2017-08-08.iso" style="float: left;"><h3>Dapper Linux 25 2017-08-08</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -220,9 +220,9 @@
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-25-2017-08-08.iso.sig">sig</a>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-25-2017-08-08.iso.sha1.txt">sha1</a>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-25-2017-08-08.iso.sha256.txt">sha256</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-25-2017-08-08.iso.sig">sig</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-25-2017-08-08.iso.sha1.txt">sha1</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-25-2017-08-08.iso.sha256.txt">sha256</a>
                                         </p>
                                     </td>
                                 </tr>
@@ -231,7 +231,7 @@
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-24-2016-10-24.iso" style="float: left;"><h3>Dapper Linux 24 2016-10-24</h3></a>
+                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-24-2016-10-24.iso" style="float: left;"><h3>Dapper Linux 24 2016-10-24</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -244,9 +244,9 @@
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-24-2016-10-24.iso.sig">sig</a>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-24-2016-10-24.iso.sha1.txt">sha1</a>
-                                        	<a href="https://studweb.cosc.canterbury.ac.nz/~msr50/DapperLinux/Dapper-Linux-Live-24-2016-10-24.iso.sha256.txt">sha256</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-24-2016-10-24.iso.sig">sig</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-24-2016-10-24.iso.sha1.txt">sha1</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-24-2016-10-24.iso.sha256.txt">sha256</a>
                                         </p>
                                     </td>
                                 </tr>
