--- a/features.html
+++ b/features.html
@@ -134,7 +134,7 @@
                             <a href="/images/screenshots/oz-sandbox.png"><img class="img-responsive" src="/images/screenshots/oz-sandbox.png" alt=""></a>
                         </div>
                         <div class="col-md-5">
-                        <h2>Sandboxed Applications with Oz</h2>
+                        <h2>Sandboxed Applications with Flatpak</h2>
                             <p class="text-left">Oz is a sandboxing framework designed to secure everyday applications. Your applications run in a secure chroot environment, with only the bare essentials the application requires to run. Sandboxes are further restricted with the system calls they are able to make, enforced by seccomp. Access to the file system and networking is disabled, unless specifically enabled inside the applications profile. Oz provides a simple UI to add and remove files from a sandbox, and brings great security with strong ease of use. Oz greatly restricts post exploitation activities, and is the future of secure desktop applications. </p>
                         </div>  
                 </div>
