--- a/download.html
+++ b/download.html
@@ -144,27 +144,27 @@
                 <div class="row">
                 	<div class="col-md-6">
                 		<div class="block">
-                            <h3> Dapper Linux 26 Alpha</h3>
-                            <p>ISO images are released weekly. Latest: 2017-11-13</p>
+                            <h3> Dapper Linux 27 Alpha</h3>
+                            <p>ISO images are released weekly. Latest: 2017-12-08</p>
                             <br>
                             <table>
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso" style="float: left;"><h3>Dapper Linux 26 2017-11-13</h3></a>
+                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2017-13-08.iso" style="float: left;"><h3>Dapper Linux 27 2017-12-08</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <p>2.5 GB ISO Image for x86_64 based personal computers</p>
+                                        <p>3.3 GB ISO Image for x86_64 based personal computers</p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sig">sig</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sha1.txt">sha1</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sha256.txt">sha256</a></p>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2017-12-08.iso.sig">sig</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2017-12-08.iso.sha1.txt">sha1</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2017-12-08.iso.sha256.txt">sha256</a></p>
                                     </td>
                                 </tr>
                             </table>
@@ -202,6 +202,27 @@
                             <p>
                             	These releases are no longer being maintained. Its always best to install the latest supported release, which you can find above.
                             </p>
+                            <table>
+                                <tr>
+                                    <td>
+                                        <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
+                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso" style="float: left;"><h3>Dapper Linux 26 2017-11-13</h3></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>2.5 GB ISO Image for x86_64 based personal computers</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sig">sig</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sha1.txt">sha1</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-26-2017-11-13.iso.sha256.txt">sha256</a></p>
+                                    </td>
+                                </tr>
+                            </table>
                             <table>
                                 <tr>
                                     <td>
